Committer: gody <gody@glapi7.agenda.si>
Changes to allow selection of old style Edit or new mozaik based RWD
edit of Email template.

 Changes to be committed:
	modified:   DetailView.html
	modified:   DetailView.php
	modified:   EditView.html
	modified:   EditView.php
	modified:   EditViewMain.html
	modified:   EmailTemplate.js

--- a/modules/EmailTemplates/EditView.html
+++ b/modules/EmailTemplates/EditView.html
@@ -233,6 +233,7 @@
 	</div>
 </form>
 <!-- END: NoInbound3 -->
+{BODY_TINY}
 <script type="text/javascript" language="javascript">
 <!-- BEGIN: NoInbound4 -->
 toggle_textarea_elem_values = ['{MOD.LBL_EDIT_ALT_TEXT}', '{MOD.LBL_HIDE_ALT_TEXT}'];
